<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:padding="5dp"
            android:rowCount="5">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_profile"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:src="@drawable/ic_cup" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:text="@string/your_profile"
                            android:textColor="@color/primary_text"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_raiting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/raiting"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/latitude"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/user_like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/like"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/longitude"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/user_unlike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/dislike"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>